# mobile-core-android

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zw3rk/mobile_core_android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mobile_core_android.cpp
app/src/main/java/com/zw3rk/mobile_core_android/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zw3rk/mobile_core_android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
